--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,32 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # 1. 코드 체크아웃
       - uses: actions/checkout@v3
 
+      # 2. JDK 설정
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
+      # 3. Gradle 빌드 (테스트 제외)
       - name: Build with Gradle
         run: ./gradlew build -x test
+
+      # 4. Docker 이미지 빌드
+      - name: Build Docker image
+        run: docker build -t my-spring-app:latest .
+
+      # 5. EC2에 배포
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ec2-user
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            docker stop my-spring-app || true
+            docker rm my-spring-app || true
+            docker run -d --name my-spring-app -p 8080:8080 my-spring-app:latest
